--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ui-sample-lib",
-  "version": "0.0.1",
+  "name": "kungfu-panda-ui",
+  "version": "1.0.4",
   "description": "A sample ui comp library",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -11,7 +11,8 @@
     "dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c",
+    "dev": "rollup -c --watch"
   },
   "author": "kungfu-panda",
   "license": "MIT",
@@ -21,14 +22,27 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18.2.66",
+    "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^4.13.0",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-postcss": "^4.0.2",
+    "tslib": "^2.6.2",
     "typescript": "^5.4.2"
   },
   "dependencies": {
     "-": "^0.0.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aneenajohn/ui-sample-lib.git"
+  },
+  "keywords": [
+    "bingo"
+  ],
+  "bugs": {
+    "url": "https://github.com/aneenajohn/ui-sample-lib/issues"
+  },
+  "homepage": "https://github.com/aneenajohn/ui-sample-lib#readme"
 }
