--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "files": [
     "dist"
   ],
+  "sideEffects": false,
   "scripts": {
     "build": "rm -rf dist && rollup -c",
     "dev": "rollup -c --watch",
@@ -35,7 +36,6 @@
     "@storybook/test": "^8.0.0",
     "@types/react": "^18.2.66",
     "postcss": "^8.4.35",
-    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^4.13.0",
     "rollup-plugin-dts": "^6.1.0",
@@ -43,6 +43,9 @@
     "storybook": "^8.0.0",
     "tslib": "^2.6.2",
     "typescript": "^5.4.2"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0"
   },
   "dependencies": {
     "-": "^0.0.1"
